# doc-agent

./: .gitignore
agent/: .gitignore  __init__.py  conftest.py  pyproject.toml
agent/app/: __init__.py  test_agent_patch_paths_v2.py
agent/app/api/: __init__.py  document_api.py
agent/app/architecture/: __init__.py  architecture_agent.py  test_architecture_agent.py
agent/app/cost/: __init__.py  apply_cost.py  cost_agent.py  gateway_client.py  test_cost_agent.py
agent/app/discovery/: __init__.py  discovery_agent.py  test_discovery_agent.py
agent/app/formatter/: __init__.py  formatter_agent.py  milestone_sync.py
agent/app/funding/: __init__.py  funding_validator.py  test_funding_v2.py  test_funding_validator.py
agent/app/parent/: __init__.py  inference_fallback.py  internal_tools.py  orchestrator.py  patch_builder.py  runtime.py  task_planner.py  test_inference_fallback.py  test_internal_routing.py  test_orchestrator.py  test_runtime.py
agent/app/reviewer/: __init__.py  apply_review.py  reviewer_agent.py  test_reviewer_agent.py
agent/app/staffing/: __init__.py  apply_recommendation.py  staffing_agent.py  test_staffing_agent.py
agent/data/presets/: agent_registry.json  phase_hour_patterns.json  project_type_rules.json  rate_card.json  role_catalog.json  role_pool.json  staffing_presets.json
agent/lambdas/document_api/: handler.py  runtime_proxy.py  test_handler.py
agent/lambdas/gateway_tools/: __init__.py  (+12 more)
agent/lib/: progress.py
agent/templates/: README.md  apn-poc-template.docx  apn-poc-template_v2.docx
agent/tests/: test_integration.py
(+149 files in other folders)
