[project]
name = "doc-agent"
version = "2.0.0"
description = "AgentCore multi-agent document generation system"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.0",
    "pydantic>=2.0",
    "bedrock-agentcore>=1.6.0",
    "strands-agents>=1.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
